Upgrade maven-surefire-plugin to 3.5.2