@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-Copyright (C) 2022, 2024, Yasumasa Suenaga
+Copyright (C) 2022, 2025, Yasumasa Suenaga
 
 This file is part of ffmasm.
 
@@ -71,10 +71,11 @@ along with ffmasm.  If not, see <http://www.gnu.org/licenses/>.
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>3.5.2</version>
                 <configuration>
                     <jvm>${java.home}/bin/java</jvm>
                     <argLine>--enable-native-access=ALL-UNNAMED</argLine>
+                    <argLine>--enable-native-access=com.yasuenag.ffmasm</argLine>
                 </configuration>
             </plugin>
         </plugins>
